[tool.poetry]
name = "sorter"
version = "0.1.0"
description = "cli script that alows to sort file & folders"
authors = ["Andrii Chychur <sideroalogo8@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
